feat: adjusted layout knzept

--- a/src/components/layout/mainNav/mainNav.scss
+++ b/src/components/layout/mainNav/mainNav.scss
@@ -5,10 +5,8 @@
 }
 
 .navigation {
-	background-color: aqua;
-
-	.container {
-		background-color: aquamarine;
+	.wrapper {
+		background-color: var(--surface1);
 	}
 
 	.header {
