--- a/src/components/__libary/01_Atoms/overlayContainer/overlayContainer.scss
+++ b/src/components/__libary/01_Atoms/overlayContainer/overlayContainer.scss
@@ -1,3 +1,33 @@
+[data-overlay="off"] {
+    #overlay-container {
+        svg {
+            display: none;
+        }
+    }
+}
+
+[data-overlay="on"] {
+    #overlay-container {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        z-index: 100;
+        opacity: 10.15;
+
+        svg {
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
+
+    }
+}
+
+
+
 #overlay-container {
     svg {
         display: none;
