--- a/src/scss/2-base/_blockquote.scss
+++ b/src/scss/2-base/_blockquote.scss
@@ -20,5 +20,6 @@ blockquote {
 	border-left: solid 3px var(--text2);
 	font-style: italic;
 	margin: math.div(vars.$gutter, 1) 0 math.div(vars.$gutter, 4) 0;
-	padding: math.div(vars.$gutter, 1.5) math.div(vars.$gutter, .2) math.div(vars.$gutter, 1) math.div(vars.$gutter, .6);
+	padding: math.div(vars.$gutter, 1.5) math.div(vars.$gutter, 0.2)
+		math.div(vars.$gutter, 1) math.div(vars.$gutter, 0.6);
 }
