--- a/src/scss/grid/_row.scss
+++ b/src/scss/grid/_row.scss
@@ -2,7 +2,7 @@
 @use 'vars';
 @use 'mixins';
 
-[data-layout="box"] {
+[data-layout='box'] {
 	.container {
 		margin: 0 auto;
 		width: 100%;
@@ -10,7 +10,7 @@
 	}
 }
 
-[data-layout="fullwidth"] {
+[data-layout='fullwidth'] {
 	.container {
 		margin: 0 auto;
 		width: 100%;
@@ -18,7 +18,7 @@
 	}
 }
 
-[data-layout-direction="rtl"] {
+[data-layout-direction='rtl'] {
 	.row {
 		// flex-direction: row-reverse;
 	}
@@ -32,7 +32,7 @@
 	}
 }
 
-[data-layout-direction="ltr"] {
+[data-layout-direction='ltr'] {
 	.row {
 		// flex-direction: row-reverse;
 	}
@@ -56,13 +56,11 @@
 	width: 100%;
 	max-width: vars.$reworkGrid__width;
 	max-width: 100%;
-	;
-
 	&--spacing {
 		margin-bottom: -(vars.$gutter);
 	}
 
-	&--spacing>.column {
+	&--spacing > .column {
 		margin-bottom: vars.$gutter;
 	}
 
@@ -95,7 +93,6 @@
 		}
 	}
 }
-
 
 // // RTL Adjustemnts on grid system Default LTR
 // .dir-rtl {
