--- a/src/components/layout/mainNav/mainNav.scss
+++ b/src/components/layout/mainNav/mainNav.scss
@@ -17,7 +17,7 @@
 		$burgerBarWidth: 38px;
 		$burgerBarMargin: 6px;
 		$headerLinksHeight: 40px;
-		position: fixed;
+		// position: fixed;
 		top: 0;
 		left: 0;
 		width: 100%;
