--- a/src/scss/2-base/_body.scss
+++ b/src/scss/2-base/_body.scss
@@ -18,3 +18,82 @@ body {
 		box-sizing: border-box;
 	}
 }
+
+// dialog::backdrop {
+//   background-color: rgba(0, 0, 0, 0.6); /* Dark semi-transparent background */
+//   backdrop-filter: blur(2px); /* Optional: adds blur effect */
+// }
+
+// dialog::backdrop {
+//   background-color: rgba(0, 0, 0, 0);
+//   transition: background-color 0.3s ease;
+// }
+
+// dialog[open]::backdrop {
+// 	background-color: rgba(0, 0, 0, 0.3);
+// 	backdrop-filter: blur(1px);
+// }
+
+// dialog[closed]::backdrop {
+// 	background-color: rgba(0, 0, 0, 0.7);
+// 	backdrop-filter: blur(1px);
+// }
+
+.settings-modal {
+	animation: roadRunnerOut 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+}
+
+.settings-modal.closing {
+	// transform: translateX(-50px);
+	animation: roadRunnerIn 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+}
+
+.modal-animation[open]::backdrop {
+	animation: backdropFadeIn 0.75s ease-in-out forwards;
+}
+
+.settings-modal::backdrop {
+	animation: fadeOut .3s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+}
+
+@keyframes backdropFadeIn {
+	from {
+		background-color: rgba(0, 0, 0, 0);
+	}
+	to {
+		background-color: rgba(0, 0, 0, 0.65);
+	}
+}
+
+@keyframes roadRunnerIn {
+	0% {
+		transform: translateX(-1500px) skewX(30deg) scaleX(1.3);
+	}
+	70% {
+		transform: translateX(30px) skewX(0deg) scaleX(0.9);
+	}
+	100% {
+		transform: translateX(0px) skewX(0deg) scaleX(1);
+	}
+}
+
+@keyframes roadRunnerOut {
+	0% {
+		transform: translateX(0px) skewX(0deg) scaleX(1);
+	}
+	30% {
+		transform: translateX(-30px) skewX(-5deg) scaleX(0.9);
+	}
+	100% {
+		transform: translateX(1500px) skewX(30deg) scaleX(1.3);
+	}
+}
+
+@keyframes fadeOut {
+  0% {
+    background:rgba(211,11,111,.65);
+  }
+  100% {
+    background:rgba(0,0,0,.0);
+  }
+}
