update project dependencies

--- a/src/components/layout/mainNav/mainNav.scss
+++ b/src/components/layout/mainNav/mainNav.scss
@@ -300,7 +300,7 @@
 
 		&--opaque &__item,
 		&--scrolled &__item {
-			color: color('primary');
+			// color: color('primary');
 		}
 
 		&__item_image {
