--- a/src/scss/grid/_mixins.scss
+++ b/src/scss/grid/_mixins.scss
@@ -55,21 +55,21 @@
 	@for $i from 1 through vars.$reworkGrid__columns {
 		&.#{ $name }-#{ $i } {
 			flex: 0 1 auto;
-			width: percentage(math.div(1, vars.$reworkGrid--columns)) * $i;
+			width: math.percentage(math.div(1, vars.$reworkGrid--columns)) * $i;
 		}
 
 		&.#{ $name }-offset-#{ $i } {
-			margin-left: percentage(math.div(1, vars.$reworkGrid--columns)) * $i;
+			margin-left: math.percentage(math.div(1, vars.$reworkGrid--columns)) * $i;
 		}
 
 		&.#{ $name }-pull-#{ $i } {
 			left: auto;
-			right: percentage(math.div(1, vars.$reworkGrid--columns)) * $i;
+			right: math.percentage(math.div(1, vars.$reworkGrid--columns)) * $i;
 		}
 
 		&.#{ $name }-push-#{ $i } {
 			right: auto;
-			left: percentage(math.div(1, vars.$reworkGrid--columns)) * $i;
+			left: math.percentage(math.div(1, vars.$reworkGrid--columns)) * $i;
 		}
 	}
 
